<resources>
    <string name="app_name">MovieDB</string>
    <string name="home_title">Movie DB App</string>
    <string name="find_movies">Find your movies</string>
    <string name="search_hint">Search Here …</string>
    <string name="categories_title">Categories</string>
    <string name="top_rated">Top Rated</string>
    <string name="watch_list">Watch List</string>
    <string name="title">Title:</string>
    <string name="movie_image">Movie image</string>
    <string name="search_button">Search button</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">StayToNight</string>
    <string name="nurtas123">nurtas123</string>
    <string name="release_date">Release Date:</string>
    <string name="average_rating">Average Rating:</string>
    <string name="your_watch_list">Your Watch List</string>
</resources>