<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="18dp"
    android:background="@color/background_1">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_movie"
        android:layout_width="95dp"
        android:layout_height="120dp"
        android:contentDescription="@string/movie_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/Radius16dp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_movie_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/iv_movie"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_movie_title_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/text"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/text"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_movie_date_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/release_date"
            android:textColor="@color/text"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_movie_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/text"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_movie_rate_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/average_rating"
            android:textColor="@color/text"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_movie_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/text"
            android:textSize="12sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatToggleButton
        android:id="@+id/tb_add_to_watchlist"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="5dp"
        android:background="@drawable/background_bookmark"
        android:textOff=""
        android:textOn=""
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ll_movie_info"
        app:layout_constraintTop_toTopOf="parent"
        android:checked="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>