<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_1">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_title"
        android:textColor="@color/text"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="29dp"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/tv_find_movie_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_movies"
        android:textColor="@color/text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:layout_marginHorizontal="29dp"
        android:layout_marginTop="22dp"/>

    <EditText
        android:id="@+id/et_search"
        android:layout_width="252dp"
        android:layout_height="42dp"
        android:background="@drawable/background_buttons"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="29dp"
        android:layout_marginTop="18dp"
        android:hint="@string/search_hint"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:paddingHorizontal="15dp"
        app:layout_constraintTop_toBottomOf="@id/tv_find_movie_title" />

    <ImageButton
        android:id="@+id/ib_search"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginEnd="29dp"
        android:layout_marginTop="18dp"
        android:src="@drawable/ic_search"
        android:contentDescription="@string/search_button"
        android:background="@drawable/background_buttons"
        app:layout_constraintTop_toBottomOf="@id/tv_find_movie_title"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_categories_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/categories_title"
        android:textColor="@color/text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_search"
        android:layout_marginHorizontal="29dp"
        android:layout_marginTop="22dp"/>

    <HorizontalScrollView
        android:id="@+id/hsv_genres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_categories_title"
        android:paddingStart="29dp"
        android:clipToPadding="false"
        android:layout_marginTop="25dp"
        android:scrollbars="none">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                
                <androidx.appcompat.widget.AppCompatRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:button="@null"
                    android:text="@string/top_rated"
                    android:textColor="@color/text"
                    android:background="@drawable/background_radio_button"
                    android:paddingHorizontal="22dp"
                    android:paddingVertical="7dp"
                    android:textSize="12sp"
                    android:layout_marginEnd="12dp"/>

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:button="@null"
                    android:text="@string/top_rated"
                    android:textColor="@color/text"
                    android:background="@drawable/background_radio_button"
                    android:paddingHorizontal="22dp"
                    android:paddingVertical="7dp"
                    android:textSize="12sp"
                    android:layout_marginEnd="12dp"/>

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:button="@null"
                    android:text="@string/top_rated"
                    android:textColor="@color/text"
                    android:background="@drawable/background_radio_button"
                    android:paddingHorizontal="22dp"
                    android:paddingVertical="7dp"
                    android:textSize="12sp"
                    android:layout_marginEnd="12dp"/>

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:button="@null"
                    android:text="@string/top_rated"
                    android:textColor="@color/text"
                    android:background="@drawable/background_radio_button"
                    android:paddingHorizontal="22dp"
                    android:paddingVertical="7dp"
                    android:textSize="12sp"
                    android:layout_marginEnd="12dp"/>
                
            </RadioGroup>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_movies"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/hsv_genres"
        android:layout_marginHorizontal="29dp"
        tools:listitem="@layout/item_movie"
        android:layout_marginTop="31dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="134dp"
        android:layout_height="42dp"
        android:text="@string/watch_list"
        android:background="@drawable/background_radio_button_checked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="31dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>